compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bools__bool_literals.snap
---
source: compiler-core/src/go/tests/bools.rs
expression: "\npub fn go() -> Bool {\n  True\n}\n"
---
----- SOURCE CODE

pub fn go() -> Bool {
  True
}


----- COMPILED GO
package thepackage

func Go() bool {
  return true
}
