compiler-core/src/go/tests/snapshots/gleam_core__go__tests__bools__bool_operators.snap
---
source: compiler-core/src/go/tests/bools.rs
expression: "\npub fn go() -> Bool {\n  True && False || !True\n}\n"
---
----- SOURCE CODE

pub fn go() -> Bool {
  True && False || !True
}


----- COMPILED GO
package thepackage

func Go() bool {
  return ((true && false) || !true)
}
